added more info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div class="container">
         <div class="meep">
             <form>
+                    <div class="display">
+                        <input type="text" name="display">
+                    </div>
                     <div>
                         <input type="button" value="1">
                         <input type="button" value="2">
